--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ menu__settings:
       url: '/'
     - title: 'Projects'
       url: '/project/'
-    - title: 'About'
+    - title: 'About Us'
       url: '/about/'
